--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ var width = 960,
 var y = d3.scale.linear()
     .range([height, 0]);
 
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
 var chart = d3.select(".chart")
     .attr("width", width)
     .attr("height", height);
