--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <meta charset="utf-8">
 <style>
 
-.chart rect {
+.bar {
   fill: steelblue;
 }
 
-.chart text {
-  fill: white;
+.axis text {
   font: 10px sans-serif;
-  text-anchor: middle;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
 }
 
 </style>
@@ -17,40 +26,51 @@
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script>
 
-var width = 960,
-    height = 500;
-
-var y = d3.scale.linear()
-    .range([height, 0]);
+var margin = {top: 20, right: 30, bottom: 30, left: 40},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
 
 var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
 
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left");
+
 var chart = d3.select(".chart")
-    .attr("width", width)
-    .attr("height", height);
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.csv("data.csv", type, function(error, data) {
-  y.domain([0, d3.max(data, function(d) { return d.pethouseholds; })]);
   x.domain(data.map(function(d) { return d.location; }));
+  y.domain([0, d3.max(data, function(d) { return d.pethouseholds; })]);
 
-  var barWidth = width / data.length;
+  chart.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
 
-  var bar = chart.selectAll("g")
+  chart.append("g")
+      .attr("class", "y axis")
+      .call(yAxis);
+
+  chart.selectAll(".bar")
       .data(data)
-    .enter().append("g")
-      .attr("transform", function(d, i) { return "translate(" + i * barWidth + ",0)"; });
-
-  bar.append("rect")
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.location); })
       .attr("y", function(d) { return y(d.pethouseholds); })
       .attr("height", function(d) { return height - y(d.pethouseholds); })
-      .attr("width", barWidth - 1);
-
-  bar.append("text")
-      .attr("x", barWidth / 2)
-      .attr("y", function(d) { return y(d.pethouseholds) + 3; })
-      .attr("dy", ".75em")
-      .text(function(d) { return d.pethouseholds; });
+      .attr("width", x.rangeBand());
 });
 
 function type(d) {
