--- a/index.html
+++ b/index.html
@@ -85,4 +85,11 @@ function type(d) {
   return d;
 }
 
+svg.append("text")
+        .attr("x", (width / 2))             
+        .attr("y", 0 - (margin.top / 2))
+        .attr("text-anchor", "middle")  
+        .style("font-size", "16px") 
+        .style("text-decoration", "underline")  
+        .text("Value vs Date Graph");
 </script>
