--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@ svg.append("text")
         .attr("y", 0 - (margin.top / 2))
         .attr("text-anchor", "middle")  
         .style("font-size", "16px") 
-        .style("text-decoration", "underline")  
-        .text("Value vs Date Graph");
+        .style("text-decoration")  
+        .text("Number of Pet Households");
 </script>
