--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ d3.csv("data.csv", type, function(error, data) {
               .style("left", d3.event.pageX - 50 + "px")
               .style("top", d3.event.pageY - 70 + "px")
               .style("display", "inline-block")
-              .html((d.pethouseholds) + "<br>" + (d.location));
+              .html((d.location)+ "<br>" + (d.pethouseholds) );
         })
         .on("mouseout", function(d){ tooltip.style("display", "none");});
       
