--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@ d3.csv("data.csv", type, function(error, data) {
 });
 
 
-
+ chart.append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 0 - margin.left)
+      .attr("x",0 - (height / 2))
+      .attr("dy", "1em")
+      .style("text-anchor", "middle")
+      .text("Number of Pet Households (in 1000)"); 
 
 chart.append("text")
       .attr("transform",
