--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@ d3.csv("data.csv", type, function(error, data) {
       .style("text-anchor", "middle")
       .text("Number of Pet Households (in 1000)"); 
 
+chart.append("text")             
+      .attr("transform",
+            "translate(" + (width/2) + " ," + 
+                           (height + margin.top + 120) + ")")
+      .style("text-anchor", "middle")
+      .text("Location");
+
 chart.append("text")
       .attr("transform",
             "translate(" + (width/2-110) + " ," + 
