--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ d3.csv("data.csv", type, function(error, data) {
 chart.append("text")             
       .attr("transform",
             "translate(" + (width/2) + " ," + 
-                           (height - 200) + ")")
+                           (height + 200) + ")")
       .style("text-anchor", "middle")
       .text("Location");
 
