--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
+<title>Pets in US Narrative Visualization</title>
+
+  </head>
+  <body>
 <style>
 
 .bar {
@@ -137,3 +145,4 @@ function type(d) {
     
 
 </script>
+</body></html>
