--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
 <title>Pets in US Narrative Visualization</title>
 
   </head>
-  <body>
+  <body class=" hasGoogleVoiceExt" style="cursor: default;">
+  <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="https://neohann.github.io/ddv/index.html">Pets in US Narrative Visualization</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="https://neohann.github.io/ddv/index.html">Scene 1</a></li>
+            <li><a href="https://neohann.github.io/ddv/2/index.html">Scene 2</a></li>
+            <li><a href="https://neohann.github.io/ddv/3/index.html">Scene 3</a></li>
+            <li class="active"><a href="https://neohann.github.io/ddv/4/index.html">Scene 4</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    
 <style>
 
 .bar {
