--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    
+
+    <div class="container">
+
+          <div class="page-header">
+            <h1>Pet Households in US -- All States</h1>
+          </div>
+          <p class="lead">
+                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart, the dogs and cats population in the second chart and the percentage of pet households of each state in the third chart.  Enjoy your exploration! </p>
+                          
 <style>
 
 .bar {
