--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ function type(d) {
 
 </script>
 
+//22 重叠了
 <style>
 
 .bar {
@@ -252,9 +253,9 @@ var svg = d3.select("body")
     .attr("height", "100%")
     .attr("viewBox", "0 0 " + width + " " + height);
 
-d3.csv("data.csv", type, function(error, data) {
+d3.csv("dog.csv", type, function(error, data) {
   x.domain(data.map(function(d) { return d.location; }));
-  y.domain([0, d3.max(data, function(d) { return d.pethouseholds; })]);
+  y.domain([0, d3.max(data, function(d) { return d.dog; })]);
 
   chart.append("g")
       .attr("class", "x axis")
@@ -276,15 +277,15 @@ d3.csv("data.csv", type, function(error, data) {
     .enter().append("rect")
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.location); })
-      .attr("y", function(d) { return y(d.pethouseholds); })
-      .attr("height", function(d) { return height - y(d.pethouseholds); })
+      .attr("y", function(d) { return y(d.dog); })
+      .attr("height", function(d) { return height - y(d.dog); })
       .attr("width", x.rangeBand())
       .on("mousemove", function(d){
             tooltip
               .style("left", d3.event.pageX - 50 + "px")
               .style("top", d3.event.pageY - 70 + "px")
               .style("display", "inline-block")
-              .html((d.location)+ "<br>" + (d.pethouseholds) );
+              .html((d.location)+ "<br>" + (d.dog) );
         })
         .on("mouseout", function(d){ tooltip.style("display", "none");});
       
@@ -297,7 +298,7 @@ d3.csv("data.csv", type, function(error, data) {
       .attr("x",0 - (height / 2))
       .attr("dy", "1em")
       .style("text-anchor", "middle")
-      .text("Number of Pet Households (in 1000)"); 
+      .text("Dog Population (in 1000)"); 
 
 
 chart.append("text")
@@ -309,7 +310,7 @@ chart.append("text")
       .attr("dy", "1em")
       .attr("class", "annotation")
       .style("text-anchor", "middle")
-      .text("Top 3 Pet Households States: California, Texas and Florida"); 
+      .text("Top 3 Dog populations: California, Texas and Florida"); 
   
 
 
