--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="navbar-header">
           
-          <a class="navbar-brand" href="https://neohann.github.io/ddv/index.html">Pets in US Narrative Visualization</a>
+          <a class="navbar-brand">Pets in US Narrative Visualization</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
