--- a/4/index.html
+++ b/4/index.html
@@ -8,23 +8,36 @@
 
   </head>
   <body class=" hasGoogleVoiceExt" style="cursor: default;">
-  <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          
-          <a class="navbar-brand">Pets in US Narrative Visualization</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="https://neohann.github.io/ddv/index.html">Scene 1</a></li>
-            <li><a href="https://neohann.github.io/ddv/2/index.html">Scene 2</a></li>
-            <li><a href="https://neohann.github.io/ddv/3/index.html">Scene 3</a></li>
-            <li class="active"><a href="https://neohann.github.io/ddv/4/index.html">Scene 4</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+<a class="navbar-brand">Pets in US Narrative Visualization</a>
+<div class="container">
+           <div class="col-lg-12 text-center">
+           <a href="https://neohann.github.io/33/index.html">
+           <button type="button" class="btn btn-default btn-lg btn-primary">
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Scene 1
+           </button></a>
+           </div>
 
+           <div class="container">
+           <div class="col-lg-12 text-center">
+           <a href="https://neohann.github.io/33/2/index.html">
+           <button type="button" class="btn btn-default btn-lg btn-primary">
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Scene 2
+           </button></a>
+           </div>
+<div class="container">
+           <div class="col-lg-12 text-center">
+           <a href="https://neohann.github.io/33/3/index.html">
+           <button type="button" class="btn btn-default btn-lg btn-primary">
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Scene 3
+           </button></a>
+           </div>
+<div class="container">
+           <div class="col-lg-12 text-center">
+           <a href="https://neohann.github.io/33/4/index.html">
+           <button type="button" class="btn btn-default btn-lg btn-primary">
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Scene 4
+           </button></a>
+           </div>
     <div class="container">
 
           <div class="page-header">
