--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
               </p></div>
 
          </div>
+
          <div class="container">
            <div class="col-lg-12 text-center">
-           <a href="https://neohann.github.io/33/2/index.html">
+           <a href="https://neohann.github.io/33/3/index.html">
            <button type="button" class="btn btn-default btn-lg btn-primary">
-             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Next
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Prev
            </button></a>
            </div>
 
