--- a/2/index.html
+++ b/2/index.html
@@ -45,7 +45,7 @@
         <div class="container">
 
           <div class="page-header">
-            <h1>Pet Households in US -- Number Two</h1>
+            <h1>Scene 2: Pet Households in US -- Number Two</h1>
           </div>
           <p class="lead">
                           Texas has the second highest number of households who has pets. Texas has massive area of land and high number of households. That might be part of the factor that Texas is the number two highest number of pet households. </p>
