--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
 
           <div class="page-header">
-            <h1>Scene 1: Pet Households in US</h1>
+            <h1>Scene 1: Pet Households in US -- Number One</h1>
           </div>
           <p class="lead">
                           What is the top three states with the highest number of pet households is an interesting question. Someone may take a guess. New York? Pennsylvania? Nope. If you are interested in this question, this Pet households narrative visualization has the right information for you.</p>
