--- a/3/index.html
+++ b/3/index.html
@@ -45,7 +45,7 @@
         <div class="container">
 
           <div class="page-header">
-            <h1>Pet Households in US -- Number Three</h1>
+            <h1>Scene 3: Pet Households in US -- Number Three</h1>
           </div>
           <p class="lead">
                           Which state is the number three? Yes. You are right. Of all the states in the US, Florida is the third with highest pet households. If you go to Florida, do not surprise when you see a lot of people walking with their pet in a humid and hot weather. </p>
