--- a/3/index.html
+++ b/3/index.html
@@ -62,16 +62,14 @@
 <h3>In This Scene:</h3>
                 
                 </p>
-                <h3>Annotations</h3>
-                  <p class="lead">Florida is annotated.</p>
-                  <h3>Parameters</h3>
-                <p class="lead">1 Scene number. 
-<p class="lead">2 Ranking of number of pet households.</p>
-<p class="lead">3 States.</p>
-<p class="lead">4 Red highlight state on the map.</p>
+                
+                 <h3>Parameters</h3>
+                <p class="lead">1 Scene number. (Scene 3 changed)
+<p class="lead">2 Ranking of number of pet households. (Ranking #3.)</p>
+<p class="lead">3 States. (Florida)</p>
+<p class="lead">4 Red highlight state on the map. (Florida)</p>
                 <h3>Triggers</h3>
-                <p class="lead">1 The mouse click acts as a trigger event for navigation. The mouse over “Florida” will trigger for the tooltip in the chart. 
-<p class="lead">2 When click “scene 3” or “next” to change to scene 3, the ranking of the number of pet household, the states  and red highlight, will change.</p>
+                <p class="lead">2 When click “scene 3” or “next” to change to scene 3, the ranking of the number of pet household, the states  and red highlight, will change.</p>
 
                 </p>
 
