--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 1</button>
               <div class="panel">
                 <h3>Summary:</h3>
-                <p class="lead">Martini Glass structure were used in this narrative visualization. Scene 1, scene 2 and scene 3 are author driven contents which showed the top one, two and three states that has the most pet households. The Scene3 page is the "jumping off point" and leads users to the final scene, scene 4. Scene 4 contains reader driven content. It allows users to interact with the charts and know more detail on what they are interested in. All the Scenes follow the same template.
-                 Also, D3 were used in this Visualization.
+                <p class="lead"><b>Martini Glass</b>> structure were used in this narrative visualization. Scene 1, scene 2 and scene 3 are author driven contents which showed the top one, two and three states that has the most pet households. The Scene3 page is the "jumping off point" and leads users to the final scene, scene 4. Scene 4 contains reader driven content. It allows users to interact with the charts and know more detail on what they are interested in. All the Scenes follow the same template.
+                 Also, D3 were used in this Visualization on Scene 4 to offer interactions. Finally, impages was used to make the pages load faster in Scence 1,2 and 3 because no interaction needed in these three scenes. 
 
                 </p>
                  
