--- a/3/index.html
+++ b/3/index.html
@@ -75,6 +75,14 @@
 
               </p></div>
 
+<div class="container">
+           <div class="col-lg-12 text-center">
+           <a href="https://neohann.github.io/33/2/index.html">
+           <button type="button" class="btn btn-default btn-lg btn-primary">
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Prev
+           </button></a>
+           </div>
+         </div>
          </div>
          <div class="container">
            <div class="col-lg-12 text-center">
