--- a/2/index.html
+++ b/2/index.html
@@ -76,7 +76,7 @@
               </p></div>
 <div class="container">
            <div class="col-lg-12 text-center">
-           <a href="https://neohann.github.io/33/1/index.html">
+           <a href="https://neohann.github.io/33/index.html">
            <button type="button" class="btn btn-default btn-lg btn-primary">
              <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Prev
            </button></a>
