--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
            <div class="col-lg-12 text-center">
            <a href="https://neohann.github.io/33/3/index.html">
            <button type="button" class="btn btn-default btn-lg btn-primary">
-             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Prev
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Next
            </button></a>
            </div>
 
