--- a/2/index.html
+++ b/2/index.html
@@ -63,7 +63,7 @@
                 </p>
                 
                   <h3>Parameters</h3>
-                <p class="lead">1 Scene number. (Scene 2 changed)
+                <p class="lead">1 Scene number. (Change to Scene 2.)
 <p class="lead">2 Ranking of number of pet households. (Ranking #2.)</p>
 <p class="lead">3 States. (Texas)</p>
 <p class="lead">4 Red highlight state on the map. (Texas)</p>
