--- a/3/index.html
+++ b/3/index.html
@@ -64,12 +64,12 @@
                 </p>
                 
                  <h3>Parameters</h3>
-                <p class="lead">1 Scene number. (Scene 3 changed)
+                <p class="lead">1 Scene number. (Change to Scene 3.)
 <p class="lead">2 Ranking of number of pet households. (Ranking #3.)</p>
 <p class="lead">3 States. (Florida)</p>
 <p class="lead">4 Red highlight state on the map. (Florida)</p>
                 <h3>Triggers</h3>
-                <p class="lead">2 When click “scene 3” or “next” to change to scene 3, the ranking of the number of pet household, the states  and red highlight, will change.</p>
+                <p class="lead">When click “scene 3” or “next” to change to scene 3, the ranking of the number of pet household, the states  and red highlight, will change.</p>
 
                 </p>
 
