--- a/4/index.html
+++ b/4/index.html
@@ -225,7 +225,7 @@ function type(d) {
 
 
 <svg class="chart"></svg>
-<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
 
 <script>
 
@@ -247,7 +247,7 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
 
-var chart = d3.select(".chart")
+var chart2 = d3.select(".chart")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
@@ -265,7 +265,7 @@ d3.csv("dog.csv", type, function(error, data) {
   x.domain(data.map(function(d) { return d.location; }));
   y.domain([0, d3.max(data, function(d) { return d.dog; })]);
 
-  chart.append("g")
+  chart2.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
       .call(xAxis)
@@ -276,11 +276,11 @@ d3.csv("dog.csv", type, function(error, data) {
         .attr("transform", "rotate(90)")
         .style("text-anchor", "start");
   
-  chart.append("g")
+  chart2.append("g")
       .attr("class", "y axis")
       .call(yAxis);
 
-  chart.selectAll(".bar")
+  chart2.selectAll(".bar")
       .data(data)
     .enter().append("rect")
       .attr("class", "bar")
@@ -300,7 +300,7 @@ d3.csv("dog.csv", type, function(error, data) {
 });
 
 
- chart.append("text")
+ chart2.append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 0 - margin.left)
       .attr("x",0 - (height / 2))
@@ -309,7 +309,7 @@ d3.csv("dog.csv", type, function(error, data) {
       .text("Dog Population (in 1000)"); 
 
 
-chart.append("text")
+chart2.append("text")
       .attr("transform",
             "translate(" + (width/2-110) + " ," + 
                            (height + margin.top - 340) + ")")
