--- a/4/index.html
+++ b/4/index.html
@@ -224,7 +224,7 @@ function type(d) {
 </style>
 
 
-<svg class="chart"></svg>
+
 
 
 <script>
@@ -247,7 +247,8 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
 
-var chart2 = d3.select(".chart")
+var chart2 = d3.select("body")
+.append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
