--- a/4/index.html
+++ b/4/index.html
@@ -265,9 +265,9 @@ var svg = d3.select("body")
     .attr("height", "100%")
     .attr("viewBox", "0 0 " + width + " " + height);
 
-d3.csv("data.csv", type, function(error, data) {
+d3.csv("dog.csv", type, function(error, data) {
   x.domain(data.map(function(d) { return d.location; }));
-  y.domain([0, d3.max(data, function(d) { return d.pethouseholds; })]);
+  y.domain([0, d3.max(data, function(d) { return d.dog; })]);
 
   chart2.append("g")
       .attr("class", "x axis")
@@ -289,15 +289,15 @@ d3.csv("data.csv", type, function(error, data) {
     .enter().append("rect")
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.location); })
-      .attr("y", function(d) { return y(d.pethouseholds); })
-      .attr("height", function(d) { return height - y(d.pethouseholds); })
+      .attr("y", function(d) { return y(d.dog); })
+      .attr("height", function(d) { return height - y(d.dog); })
       .attr("width", x.rangeBand())
       .on("mousemove", function(d){
             tooltip
               .style("left", d3.event.pageX - 50 + "px")
               .style("top", d3.event.pageY - 70 + "px")
               .style("display", "inline-block")
-              .html((d.location)+ "<br>" + (d.pethouseholds) );
+              .html((d.location)+ "<br>" + (d.dog) );
         })
         .on("mouseout", function(d){ tooltip.style("display", "none");});
       
@@ -328,7 +328,7 @@ chart2.append("text")
 
 
 function type(d) {
-  d.pethouseholds = +d.pethouseholds; // coerce to number
+  d.dog = +d.dog; // coerce to number
   return d;
 }
 
