--- a/4/index.html
+++ b/4/index.html
@@ -102,6 +102,7 @@ var yAxis = d3.svg.axis()
     .orient("left");
 
 var chart = d3.select("body")
+    .append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
