--- a/4/index.html
+++ b/4/index.html
@@ -111,9 +111,6 @@ var chart = d3.select("body")
 var tooltip = d3.select("body").append("div").attr("class", "toolTip");
 
 
-
-
-
 d3.csv("data.csv", type, function(error, data) {
   x.domain(data.map(function(d) { return d.location; }));
   y.domain([0, d3.max(data, function(d) { return d.pethouseholds; })]);
@@ -183,6 +180,44 @@ function type(d) {
 
 
 </script>
+<div class="container" id="aboutVisualization" style="padding-bottom: 30px;">
+           <button class="accordion">ABOUT THE VISUALIZATION--SCENE 4</button>
+              <div class="panel">
+                <h3>In This Scene:</h3>
+                <p class="lead">Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. This scene allows users to dig in more details. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other state in the first chart. Or, in the second chart, they can know more about the population of dogs and cats comparisons. Also, the percentage of pet households of California in the whole nation.   </p>
+                </p>
+                <h3>Annotations</h3>
+                  <p class="lead">California, Texas and Florida is annotated in the first chart. </p>
+                  <h3>Parameters</h3>
+                <p class="lead">1 Scene number. In this scene, scene number is “scene 4”.
+<p class="lead">2 Ranking of number of pet households. In this scene, all states are ranked.</p>
+<p class="lead">3 States. In this scene, it change to all states.</p>
+<p class="lead">4 Red highlight state in the map is not showing in this scene.</p>
+<p class="lead">5 Adding three different charts to show ranking of number of pet households, pet populations and percentage of pet households of each state in order to offer more interactive charts and detail for users.</p>
+                <h3>Triggers</h3>
+                <p class="lead">1 The mouse click acts as a trigger event for navigation. 
+<p class="lead">2 The mouse over every bar or pie chart elements will trigger for the tooltip in the chart. In the second chart, population of both dogs and cats are showing at the same time of mouse over, as well as the name of the state. </p>
+<p class="lead">3 When clicking on the legend color boxes of the second chart, it will hide the selected color and only shows the other color to let users to drill down on detail. Also, “click me to hide” on legend telling users that this feature has been offered.</p>
+<p class="lead">4 When click on “scene 4” or “next” to change to scene 4, all the above parameters will change from other scenes to scene 4 parameters. </p>
+
+                </p>
+
+              </p></div>
+
+         </div>
+         <div class="container">
+           <div class="col-lg-12 text-center">
+           <a href="https://neohann.github.io/ddv/3/index.html">
+           <button type="button" class="btn btn-default btn-lg btn-primary">
+             <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>Prev
+           </button></a>
+           </div>
+
+
+         </div>
+
+        </div><!-- /.container -->
+
 
     
 </body></html>
