--- a/4/index.html
+++ b/4/index.html
@@ -180,7 +180,9 @@ function type(d) {
 
 
 </script>
-<div class="container" id="aboutVisualization" style="padding-bottom: 30px;">
+
+
+<div class="container" id="aboutVisualization" ;">
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 4</button>
               <div class="panel">
                 <h3>In This Scene:</h3>
