--- a/4/index.html
+++ b/4/index.html
@@ -81,7 +81,6 @@
 
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
-<svg class="chart"></svg>
 
 <script>
 
@@ -104,7 +103,7 @@ var yAxis = d3.svg.axis()
     .orient("left");
 
 var chart = d3.select("body")
-    
+    .append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
