--- a/4/index.html
+++ b/4/index.html
@@ -81,6 +81,7 @@
 
 <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
+<svg class="chart"></svg>
 
 <script>
 
@@ -102,8 +103,8 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
 
-var chart = d3.select("body")
-    .append("svg")
+var chart = d3.select(".chart")
+  
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
