--- a/4/index.html
+++ b/4/index.html
@@ -183,6 +183,107 @@ function type(d) {
 
 </script>
 
+<svg class="chart2"></svg>
+
+<script>
+
+var margin = {top: 20, right: 30, bottom: 70, left: 70},
+    width = 1200 - margin.left - margin.right,
+    height = 550 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left");
+
+var chart2 = d3.select(".chart2")
+  
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var tooltip = d3.select("body").append("div").attr("class", "toolTip");
+
+
+d3.csv("data.csv", type, function(error, data) {
+  x.domain(data.map(function(d) { return d.location; }));
+  y.domain([0, d3.max(data, function(d) { return d.pethouseholds; })]);
+
+  chart2.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis)
+      .selectAll("text")
+        .attr("y", 0)
+        .attr("x", 9)
+        .attr("dy", ".35em")
+        .attr("transform", "rotate(90)")
+        .style("text-anchor", "start");
+  
+  chart2.append("g")
+      .attr("class", "y axis")
+      .call(yAxis);
+
+  chart2.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.location); })
+      .attr("y", function(d) { return y(d.pethouseholds); })
+      .attr("height", function(d) { return height - y(d.pethouseholds); })
+      .attr("width", x.rangeBand())
+      .on("mousemove", function(d){
+            tooltip
+              .style("left", d3.event.pageX - 50 + "px")
+              .style("top", d3.event.pageY - 70 + "px")
+              .style("display", "inline-block")
+              .html((d.location)+ "<br>" + (d.pethouseholds) );
+        })
+        .on("mouseout", function(d){ tooltip.style("display", "none");});
+      
+});
+
+
+ chart2.append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 0 - margin.left)
+      .attr("x",0 - (height / 2))
+      .attr("dy", "1em")
+      .style("text-anchor", "middle")
+      .text("Number of Pet Households (in 1000)"); 
+
+
+chart2.append("text")
+      .attr("transform",
+            "translate(" + (width/2-110) + " ," + 
+                           (height + margin.top - 340) + ")")
+      .attr("y", 0 - margin.left)
+      .attr("x",0 - (height / 4))
+      .attr("dy", "1em")
+      .attr("class", "annotation")
+      .style("text-anchor", "middle")
+      .text("Top 3 Pet Households States: California, Texas and Florida"); 
+  
+
+
+
+function type(d) {
+  d.pethouseholds = +d.pethouseholds; // coerce to number
+  return d;
+}
+
+
+</script>
 
 <div class="container" id="aboutVisualization" ;">
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 4</button>
