--- a/4/index.html
+++ b/4/index.html
@@ -391,20 +391,20 @@ function type(d) {
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 4</button>
               <div class="panel">
                 <h3>In This Scene:</h3>
-                <p class="lead">Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. This scene allows users to dig in more details. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other state in the first chart. Or, in the second chart, they can know more about the population of dogs and cats comparisons. Also, the percentage of pet households of California in the whole nation.   </p>
+                <p class="lead">Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. This scene allows users to dig in more details. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other state in the first chart. Or, in the second chart, they can know more about the population of cats of each state. Also, the third chart shows dog population in US.  </p>
                 </p>
                 <h3>Annotations</h3>
-                  <p class="lead">California, Texas and Florida is annotated in the first chart. </p>
+                  <p class="lead">Top 3 Pet Households States, dog populations and cat populations were annotated in the each chart. </p>
                   <h3>Parameters</h3>
                 <p class="lead">1 Scene number. In this scene, scene number is “scene 4”.
 <p class="lead">2 Ranking of number of pet households. In this scene, all states are ranked.</p>
 <p class="lead">3 States. In this scene, it change to all states.</p>
 <p class="lead">4 Red highlight state in the map is not showing in this scene.</p>
-<p class="lead">5 Adding three different charts to show ranking of number of pet households, pet populations and percentage of pet households of each state in order to offer more interactive charts and detail for users.</p>
+<p class="lead">5 Adding three different charts to show ranking of number of pet households, cat populations and dog populations of each state in order to offer more interactive charts and detail for users.</p>
                 <h3>Triggers</h3>
                 <p class="lead">1 The mouse click acts as a trigger event for navigation. 
-<p class="lead">2 The mouse over every bar or pie chart elements will trigger for the tooltip in the chart. In the second chart, population of both dogs and cats are showing at the same time of mouse over, as well as the name of the state. </p>
-<p class="lead">3 When clicking on the legend color boxes of the second chart, it will hide the selected color and only shows the other color to let users to drill down on detail. Also, “click me to hide” on legend telling users that this feature has been offered.</p>
+<p class="lead">2 The mouse over every bar on charts will trigger for the tooltip in the bar and shows the name and value of the bar.  </p>
+
 <p class="lead">4 When click on “scene 4” or “next” to change to scene 4, all the above parameters will change from other scenes to scene 4 parameters. </p>
 
                 </p>
