--- a/4/index.html
+++ b/4/index.html
@@ -44,7 +44,7 @@
             <h1>Scene 4: Pet Households in US -- All States</h1>
           </div>
           <p class="lead">
-                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart, the dogs and cats population in the second chart and the percentage of pet households of each state in the third chart.  Enjoy your exploration! </p>
+                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart. Also, the detail of cats populations of each state were shown in second chart. The third chart is showing the dog populations. Can you see what changes when see to cat and dog population level? </p>
           </div>
 
 <style>
@@ -183,6 +183,9 @@ function type(d) {
 
 </script>
 
+
+<p class="lead">
+When Looking at the cat populations, the top three ranking is still CA, TX and FL. But what about the dog populatins? </p>
 <svg class="chart2"></svg>
 
 <script>
@@ -272,7 +275,7 @@ chart2.append("text")
       .attr("dy", "1em")
       .attr("class", "annotation")
       .style("text-anchor", "middle")
-      .text("Top 3 Cat population States: Texas, California and Florida"); 
+      .text("Top 3 Cat population States: California, Texas and Florida"); 
   
 
 
@@ -285,6 +288,8 @@ function type(d) {
 
 </script>
 
+<p class="lead">
+In dog populations chart, Texas surpass California and become most dog population state!  </p>
 <svg class="chart3"></svg>
 
 <script>
@@ -374,7 +379,7 @@ chart3.append("text")
       .attr("dy", "1em")
       .attr("class", "annotation")
       .style("text-anchor", "middle")
-      .text("Top 3 Dog population States: California, Texas and Florida"); 
+      .text("Top 3 Dog population States: Texas, California and Florida"); 
   
 
 
