--- a/4/index.html
+++ b/4/index.html
@@ -44,7 +44,7 @@
             <h1>Scene 4: Pet Households in US -- All States</h1>
           </div>
           <p class="lead">
-                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart. Also, the detail of cats populations of each state were shown in second chart. The third chart is showing the dog populations. Can you see what changes when see to cat and dog population level? </p>
+                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart. Also, the detail of cats populations of each state were shown in second chart. The third chart is showing the dog populations. Can you see what changes when going to cat and dog population level? </p>
           </div>
 
 <style>
@@ -185,6 +185,7 @@ function type(d) {
 
 
 <p class="lead">
+The chart below shows the Cat Population of each state.<br>
 When Looking at the cat populations, the top three ranking is still CA, TX and FL. But what about the dog populatins? </p>
 <svg class="chart2"></svg>
 
@@ -289,6 +290,7 @@ function type(d) {
 </script>
 
 <p class="lead">
+The chart below shows the Cat Population of each state.<br>
 In dog populations chart, Texas surpass California and become most dog population state!  </p>
 <svg class="chart3"></svg>
 
