--- a/4/index.html
+++ b/4/index.html
@@ -186,7 +186,7 @@ function type(d) {
 
 <p class="lead">
 <b>The chart below shows the Cat Population of each state.</b><br>
-When Looking at the cat populations, the top three ranking is still CA, TX and FL. But what about the dog populatins? </p>
+When Looking at the cat populations, the top three ranking is still CA, TX and FL. But what about the dog populations? </p>
 <svg class="chart2"></svg>
 
 <script>
@@ -290,7 +290,7 @@ function type(d) {
 </script>
 
 <p class="lead">
-<b>The chart below shows the Cat Population of each state.</b><br>
+<b>The chart below shows the Dog Population of each state.</b><br>
 In dog populations chart, Texas surpass California and become most dog population state!  </p>
 <svg class="chart3"></svg>
 
