--- a/4/index.html
+++ b/4/index.html
@@ -44,7 +44,9 @@
             <h1>Scene 4: Pet Households in US -- All States</h1>
           </div>
           <p class="lead">
-                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart. Also, the detail of cats populations of each state were shown in second chart. The third chart is showing the dog populations. Can you see what changes when going to cat and dog population level? </p>
+                          Now you know that the top three pet households are California, Texas and Florida. Here are some charts for you to dig out more. You can see the ranking of all states in the first chart. Also, the detail of cats populations of each state were shown in second chart. The third chart is showing the dog populations. Can you see what changes when going to cat and dog population level? </p><br>
+                          <p> 
+                          <b>The chart below shows the Number of Pet Households of each state.</b> </p><br>
           </div>
 
 <style>
