--- a/4/index.html
+++ b/4/index.html
@@ -403,7 +403,7 @@ function type(d) {
                 <p class="lead">Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. This scene allows users to dig in more details. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other state in the first chart. Or, in the second chart, they can know more about the population of cats of each state. Also, the third chart shows dog population in US.  </p>
                 </p>
                 <h3>Annotations</h3>
-                  <p class="lead">Top 3 Pet Households States, dog populations and cat populations were annotated in the each chart. </p>
+                  <p class="lead">Top 3 Pet Households States, dog populations and cat populations were annotated in each chart. </p>
                   <h3>Parameters</h3>
                 <p class="lead">1 Scene number. In this scene, scene number is “scene 4”.
 <p class="lead">2 Ranking of number of pet households. In this scene, all states are ranked.</p>
@@ -412,7 +412,7 @@ function type(d) {
 <p class="lead">5 Adding three different charts to show ranking of number of pet households, cat populations and dog populations of each state in order to offer more interactive charts and detail for users.</p>
                 <h3>Triggers</h3>
                 <p class="lead">1 The mouse click acts as a trigger event for navigation. 
-<p class="lead">2 The mouse over every bar on charts will trigger for the tooltip in the bar and shows the name and value of the bar.  </p>
+<p class="lead">2 The mouse over every bar will trigger for the tooltip in the bar and shows the name and value of the bar.  </p>
 
 <p class="lead">4 When click on “scene 4” or “next” to change to scene 4, all the above parameters will change from other scenes to scene 4 parameters. </p>
 
